# helloworld

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  build_all.sh  build_all_platforms.sh  prologue.make
src/include/: helloworld.h  libprotobuf.hpp
src/lib/: helloworld.c  list_people.cc
test/: main.c  test_protobuf.cpp
